syntax = "proto3";

package genworker;

service GenWorkerService {
  // CRUD
  rpc Create (CreateRequest) returns (CreateResponse);
  rpc Update (UpdateRequest) returns (UpdateResponse);
  rpc FindOneById (FindOneByIdRequest) returns (FindResponse);

  // Special
  rpc EnqueueTask (EnqueueRequest) returns (DefaultResponse);
  rpc FinishPartialTask (FinishPartialTaskRequest) returns (DefaultResponse);
  rpc FinishTask (FinishTaskRequest) returns (DefaultResponse);

  rpc Register (RegisterRequest) returns (DefaultResponse);
  rpc GenWorkerAssign (GenWorkerAssignRequest) returns (DefaultResponse);
  rpc GetGenWorkersAssignedToFlow (GetGenWorkersAssignedToFlowRequest) returns (GetGenWorkersAssignedToFlowResponse);
  rpc GenWorkerDisconnect (GenWorkerDisconnectRequest) returns (DefaultResponse);
}

message BaseResponse {
  string status = 1;
  string msg = 2;
  bool ok = 3;
}

message DefaultResponse {
  BaseResponse res = 1;
}

// CRUD
message CreateRequest {
  string name = 1;
  string ownerId = 2;
  string path = 3;
}
message CreateResponse {
  BaseResponse res = 1;
  GenWorker genworker = 2;
}

message UpdateRequest {
  string id = 1;
  GenWorker genworker = 2;
}
message UpdateResponse {
  BaseResponse res = 1;
}

message FindOneByIdRequest {
  string id = 1;
  optional bool populateTeams = 2;
}
message FindResponse {
  BaseResponse res = 1;
  optional GenWorker genworker = 2;
}

// Special
message EnqueueRequest {
  string projectId = 1;
  string flowName = 2;
  string data = 3;
}
message FinishPartialTaskRequest {
  string taskId = 1;
  string workerId = 2;
  string projectId = 3;
  string flowName = 4;
  string status = 5;
}
message FinishTaskRequest {
  string taskId = 1;
  string workerId = 2;
  string projectId = 3;
  string flowName = 4;
  string status = 5;
}
message RegisterRequest {
  string ownerId = 1;
  string name = 2;
  string path = 3;
}
message GenWorkerAssignRequest {
  string genworkerId = 1;
  repeated string workerPools = 2;
}
message GetGenWorkersAssignedToFlowRequest {
  string projectId = 1;
  string flowName = 2;
  string path = 3;
}
message GetGenWorkersAssignedToFlowResponse {
  BaseResponse res = 1;
  repeated GenWorker genworkers = 2;
}
message GenWorkerDisconnectRequest {
  string genworkerId = 1;
}

// Objects
message GenWorker {
  string id = 1;
  string ownerId = 2;
  string name = 3;
  string path = 4;
  bool isActive = 5;
}